--- a/Aliento App/Presentation/Features/Campus/ListCampus/CollectionView/CampusItemCell.xib
+++ b/Aliento App/Presentation/Features/Campus/ListCampus/CollectionView/CampusItemCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -49,8 +49,8 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phrase" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wn6-sE-iCD">
-                                        <rect key="frame" x="16" y="246.5" width="53" height="20.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phrase" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wn6-sE-iCD">
+                                        <rect key="frame" x="16" y="246.5" width="575" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -63,6 +63,7 @@
                                     <constraint firstAttribute="trailing" secondItem="0Dx-23-IPJ" secondAttribute="trailing" id="D1J-ZT-UR6"/>
                                     <constraint firstItem="wn6-sE-iCD" firstAttribute="leading" secondItem="lIC-Hw-bno" secondAttribute="leading" constant="16" id="DkQ-JX-wUx"/>
                                     <constraint firstItem="7DX-8t-NrD" firstAttribute="leading" secondItem="lIC-Hw-bno" secondAttribute="leading" constant="16" id="Kyb-eb-2kk"/>
+                                    <constraint firstAttribute="trailing" secondItem="wn6-sE-iCD" secondAttribute="trailing" constant="16" id="RP2-Kw-7Z6"/>
                                     <constraint firstItem="0Dx-23-IPJ" firstAttribute="leading" secondItem="lIC-Hw-bno" secondAttribute="leading" id="TKi-mS-3qJ"/>
                                     <constraint firstItem="wn6-sE-iCD" firstAttribute="top" secondItem="7DX-8t-NrD" secondAttribute="bottom" constant="8" id="jKu-nB-n09"/>
                                 </constraints>
