--- a/Aliento App/Presentation/Features/Campus/ListCampus/CampusVC.xib
+++ b/Aliento App/Presentation/Features/Campus/ListCampus/CampusVC.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -12,6 +12,13 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CampusVC" customModule="Aliento_App" customModuleProvider="target">
             <connections>
                 <outlet property="campusCollectionView" destination="z5d-yi-czI" id="qh1-hj-MAk"/>
+                <outlet property="contentCampus" destination="vsE-EL-0lM" id="qkx-Ee-b3n"/>
+                <outlet property="emptyState" destination="lKG-NQ-RiF" id="74U-Az-Q6g"/>
+                <outlet property="emptyStateImage" destination="TEP-Ym-ZBl" id="Vzf-sp-YAp"/>
+                <outlet property="emptyStateMessage" destination="Kh4-84-cDC" id="yXr-yp-cVq"/>
+                <outlet property="emptyStateScroll" destination="99P-Uc-hgr" id="YYh-HJ-Ie0"/>
+                <outlet property="emptyStateScrollViewHeight" destination="LT2-tV-vUe" id="504-oM-05p"/>
+                <outlet property="progressIndicator" destination="xkg-8I-Yu1" id="nrp-F5-7vT"/>
                 <outlet property="view" destination="iN0-l3-epB" id="GXQ-Q3-ZmV"/>
             </connections>
         </placeholder>
@@ -20,37 +27,101 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Campus" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0pK-BI-8q5">
-                    <rect key="frame" x="16" y="60" width="64.5" height="21"/>
-                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="z5d-yi-czI" customClass="CampusCollectionView" customModule="Aliento_App" customModuleProvider="target">
-                    <rect key="frame" x="0.0" y="97" width="414" height="799"/>
+                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="xkg-8I-Yu1">
+                    <rect key="frame" x="197" y="438" width="20" height="20"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </activityIndicatorView>
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vsE-EL-0lM" userLabel="Content">
+                    <rect key="frame" x="0.0" y="48" width="414" height="814"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Campus" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0pK-BI-8q5">
+                            <rect key="frame" x="16" y="8" width="382" height="20.5"/>
+                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="z5d-yi-czI" customClass="CampusCollectionView" customModule="Aliento_App" customModuleProvider="target">
+                            <rect key="frame" x="0.0" y="44.5" width="414" height="769.5"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="tZC-Y0-qHm">
+                                <size key="itemSize" width="128" height="128"/>
+                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            </collectionViewFlowLayout>
+                        </collectionView>
+                    </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="tZC-Y0-qHm">
-                        <size key="itemSize" width="128" height="128"/>
-                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                    </collectionViewFlowLayout>
-                </collectionView>
+                    <constraints>
+                        <constraint firstItem="z5d-yi-czI" firstAttribute="top" secondItem="0pK-BI-8q5" secondAttribute="bottom" constant="16" id="8zu-FN-KZp"/>
+                        <constraint firstItem="0pK-BI-8q5" firstAttribute="leading" secondItem="vsE-EL-0lM" secondAttribute="leading" constant="16" id="DVl-l7-gfe"/>
+                        <constraint firstAttribute="trailing" secondItem="0pK-BI-8q5" secondAttribute="trailing" constant="16" id="QY6-xV-RwR"/>
+                        <constraint firstItem="0pK-BI-8q5" firstAttribute="top" secondItem="vsE-EL-0lM" secondAttribute="top" constant="8" id="SH4-eE-j1X"/>
+                        <constraint firstAttribute="bottom" secondItem="z5d-yi-czI" secondAttribute="bottom" id="TXI-mZ-Kyl"/>
+                        <constraint firstAttribute="trailing" secondItem="z5d-yi-czI" secondAttribute="trailing" id="YvZ-ww-BPQ"/>
+                        <constraint firstItem="z5d-yi-czI" firstAttribute="leading" secondItem="vsE-EL-0lM" secondAttribute="leading" id="hNh-xU-RIj"/>
+                    </constraints>
+                </view>
+                <scrollView hidden="YES" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="99P-Uc-hgr" userLabel="Empty State">
+                    <rect key="frame" x="0.0" y="48" width="414" height="814"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lKG-NQ-RiF" userLabel="Empty State">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="800"/>
+                            <subviews>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="error" translatesAutoresizingMaskIntoConstraints="NO" id="TEP-Ym-ZBl">
+                                    <rect key="frame" x="64" y="257" width="286" height="286"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" secondItem="TEP-Ym-ZBl" secondAttribute="height" multiplier="1:1" id="nOq-d6-Izg"/>
+                                    </constraints>
+                                </imageView>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Revisa tu conexión de Red " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kh4-84-cDC">
+                                    <rect key="frame" x="0.0" y="551" width="414" height="21"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstItem="TEP-Ym-ZBl" firstAttribute="leading" secondItem="lKG-NQ-RiF" secondAttribute="leading" constant="64" id="1ZL-Ad-0a2"/>
+                                <constraint firstItem="Kh4-84-cDC" firstAttribute="top" secondItem="TEP-Ym-ZBl" secondAttribute="bottom" constant="8" id="8c6-FM-enX"/>
+                                <constraint firstAttribute="trailing" secondItem="Kh4-84-cDC" secondAttribute="trailing" id="9BL-Lb-mGP"/>
+                                <constraint firstAttribute="trailing" secondItem="TEP-Ym-ZBl" secondAttribute="trailing" constant="64" id="Hsv-7M-JJy"/>
+                                <constraint firstItem="TEP-Ym-ZBl" firstAttribute="centerY" secondItem="lKG-NQ-RiF" secondAttribute="centerY" id="JI5-s4-DOB"/>
+                                <constraint firstAttribute="height" constant="800" id="LT2-tV-vUe"/>
+                                <constraint firstItem="Kh4-84-cDC" firstAttribute="leading" secondItem="lKG-NQ-RiF" secondAttribute="leading" id="V0i-dY-5I9"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <viewLayoutGuide key="safeArea" id="bLR-KJ-gvV"/>
+                    <constraints>
+                        <constraint firstItem="lKG-NQ-RiF" firstAttribute="bottom" secondItem="cDZ-ta-VZ8" secondAttribute="bottom" id="1vJ-wh-E5l"/>
+                        <constraint firstItem="lKG-NQ-RiF" firstAttribute="leading" secondItem="cDZ-ta-VZ8" secondAttribute="leading" id="E0c-N1-eg5"/>
+                        <constraint firstItem="lKG-NQ-RiF" firstAttribute="top" secondItem="cDZ-ta-VZ8" secondAttribute="top" id="EKl-it-hKy"/>
+                        <constraint firstItem="lKG-NQ-RiF" firstAttribute="width" secondItem="pxY-UD-lGS" secondAttribute="width" id="TJl-qi-m6I"/>
+                        <constraint firstItem="lKG-NQ-RiF" firstAttribute="trailing" secondItem="cDZ-ta-VZ8" secondAttribute="trailing" id="X76-EZ-FCe"/>
+                    </constraints>
+                    <viewLayoutGuide key="contentLayoutGuide" id="cDZ-ta-VZ8"/>
+                    <viewLayoutGuide key="frameLayoutGuide" id="pxY-UD-lGS"/>
+                </scrollView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="z5d-yi-czI" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="0p8-JI-1xS"/>
-                <constraint firstAttribute="bottom" secondItem="z5d-yi-czI" secondAttribute="bottom" id="9RQ-CB-Bbq"/>
-                <constraint firstItem="0pK-BI-8q5" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="16" id="MVq-T0-VEm"/>
-                <constraint firstItem="z5d-yi-czI" firstAttribute="top" secondItem="0pK-BI-8q5" secondAttribute="bottom" constant="16" id="cK0-eJ-W7v"/>
-                <constraint firstItem="0pK-BI-8q5" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="jn3-zQ-tGh"/>
-                <constraint firstItem="z5d-yi-czI" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="nfl-dx-kZ4"/>
+                <constraint firstItem="vsE-EL-0lM" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="44f-0C-3SR"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="99P-Uc-hgr" secondAttribute="bottom" id="CBO-8x-Dk1"/>
+                <constraint firstItem="99P-Uc-hgr" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="bYV-Mf-vTe"/>
+                <constraint firstItem="99P-Uc-hgr" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="cEr-3f-m7D"/>
+                <constraint firstItem="vsE-EL-0lM" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="gLw-ys-C5y"/>
+                <constraint firstItem="vsE-EL-0lM" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="o9t-Qq-HV6"/>
+                <constraint firstItem="99P-Uc-hgr" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="oRs-CD-Ihd"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="vsE-EL-0lM" secondAttribute="bottom" id="zzq-pq-cUR"/>
             </constraints>
-            <point key="canvasLocation" x="137.68115942028987" y="80.357142857142847"/>
+            <point key="canvasLocation" x="-828.98550724637687" y="-565.17857142857144"/>
         </view>
     </objects>
     <resources>
+        <image name="error" width="781" height="320"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
